--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -4,10 +4,13 @@
   <%= render @room.messages %>
 </div>
 
+<hr>
+
 <%= form_for @message, url: '#' do |f| %>
+  <%= hidden_field_tag 'room_id', @room.id %>
   <div class="form-group">
     <%= f.label :body %>
-    <%= f.text_area :body, class: 'form-control' %>
+    <%= f.text_field :body, class: 'form-control' %>
     <small class="text-muted">From 2 to 1000 characters</small>
   </div>
 
