Simple form setup.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,9 @@
 
   <body>
     <div class="container">
-      <%= yield %>
+      <div class="col-md-12 col-offset-2">
+        <%= yield %>
+      </div>
     </div>
   </body>
 </html>
