--- a/app/assets/stylesheets/mkit/_variables.scss
+++ b/app/assets/stylesheets/mkit/_variables.scss
@@ -23,7 +23,7 @@ $white-color: #FFFFFF !default;
 
 $gray-color:  #999999 !default;
 
-$brand-primary: #3d4c5a !default;
+$brand-primary: $primary-color !default;
 $brand-success: $green !default;
 $brand-danger: $red !default;
 $brand-warning: $yellow !default;
